--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-4.73MB/s(Youtube:不良林), server: 54.214.170.7, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇬🇧 英国-9.07MB/s(Youtube:不良林), server: jgwcc1.gaox.ml, port: 443, type: trojan, password: 7118b5f4-0ea4-4c11-be7f-11471cb91e4a, sni: jgwcc1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.76MB/s(Youtube:不良林), server: bgpv2.ktyjsq.com, port: 12229, type: vmess, uuid: 9ea70d57-9cb6-3bd0-ae41-5601e516dcc6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.51MB/s(Youtube:不良林), server: iesei1ei.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: iesei1ei.com}}
+  - {name: 🇯🇵 日本-5.32MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇳 中国-771.1KB/s(Youtube:不良林), server: 521hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 521hk.fans8.xyz}}
-  - {name: 🇰🇷 韩国-7.38MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇯🇵 日本-5.20MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-720.3KB/s(Youtube:不良林), server: 185.167.116.250, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
   - {name: 🇺🇸 美国-505.5KB/s(Youtube:不良林), server: ahdaeph8.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: ahdaeph8.com}}
   - {name: 🇬🇧 英国-2.49MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-460.8KB/s(Youtube:不良林), server: charge.starspace.link, port: 443, type: trojan, password: 8UnS7eSMi8OFKfje, sni: charge.starspace.link, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林), server: neteasy.ga, port: 28931, type: trojan, password: MnROfwtPYa, sni: neteasy.ga, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.99MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
-      - 🇬🇧 英国-9.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-771.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-7.38MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.20MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-720.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-505.5KB/s(Youtube:不良林)
       - 🇬🇧 英国-2.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-460.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.99MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
-      - 🇬🇧 英国-9.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-771.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-7.38MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.20MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-720.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-505.5KB/s(Youtube:不良林)
       - 🇬🇧 英国-2.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-460.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.99MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
-      - 🇬🇧 英国-9.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-771.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-7.38MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.20MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-720.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-505.5KB/s(Youtube:不良林)
       - 🇬🇧 英国-2.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-460.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.99MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
-      - 🇬🇧 英国-9.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-771.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-7.38MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.20MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-720.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-505.5KB/s(Youtube:不良林)
       - 🇬🇧 英国-2.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-460.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.99MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
-      - 🇬🇧 英国-9.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-771.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-7.38MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.20MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-720.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-505.5KB/s(Youtube:不良林)
       - 🇬🇧 英国-2.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-460.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.99MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
-      - 🇬🇧 英国-9.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-771.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-7.38MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.20MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-720.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-505.5KB/s(Youtube:不良林)
       - 🇬🇧 英国-2.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-460.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.99MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
-      - 🇬🇧 英国-9.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-771.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-7.38MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.20MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-720.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-505.5KB/s(Youtube:不良林)
       - 🇬🇧 英国-2.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-460.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.99MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
