--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-724.4KB/s(Youtube:不良林), server: 185.167.116.250, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
-  - {name: 乌克兰-3.20MB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
-  - {name: 🇨🇳 中国-8.46MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-9.18MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.93MB/s(Youtube:不良林), server: 38.91.100.27, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇬🇧 英国-3.13MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.89MB/s(Youtube:不良林), server: kr01.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr01.wangxd.life, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-431.5KB/s(Youtube:不良林), server: wireless.starspace.link, port: 443, type: trojan, password: 5LN8SGTqxk336nFg, sni: wireless.starspace.link, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.64MB/s(Youtube:不良林), server: jgwcc3.gaox.ml, port: 443, type: trojan, password: b291d129-ee55-4801-a9b8-b5316e5c37b7, sni: jgwcc3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-696.6KB/s(Youtube:不良林), server: fkgfw-prod.i.sxl.cn, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
+  - {name: 🇭🇰 香港-2.17MB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
+  - {name: 🇺🇸 美国-1.53MB/s(Youtube:不良林), server: iesei1ei.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: iesei1ei.com}}
+  - {name: 🇺🇸 美国-281.5KB/s(Youtube:不良林), server: kr01.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr01.wangxd.life, skip-cert-verify: true}
+  - {name: 乌克兰-2.92MB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
+  - {name: 🇦🇺 澳大利亚-2.17MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.23MB/s(Youtube:不良林), server: 54.214.170.7, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇸🇬 新加坡-2.12MB/s(Youtube:不良林), server: 81.90.188.59, port: 41657, type: vmess, uuid: 930a425e-2fc8-4930-8735-141f6b237755, alterId: 64, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 未知国家-306.8KB/s(Youtube:不良林), server: v2.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v2.ssrsub.com}}
+  - {name: 🇺🇸 美国-2.38MB/s(Youtube:不良林), server: v4.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v4.ssrsub.com}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-724.4KB/s(Youtube:不良林)
-      - 乌克兰-3.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-431.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-696.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-281.5KB/s(Youtube:不良林)
+      - 乌克兰-2.92MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.23MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
+      - 未知国家-306.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-724.4KB/s(Youtube:不良林)
-      - 乌克兰-3.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-431.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-696.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-281.5KB/s(Youtube:不良林)
+      - 乌克兰-2.92MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.23MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
+      - 未知国家-306.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-724.4KB/s(Youtube:不良林)
-      - 乌克兰-3.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-431.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-696.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-281.5KB/s(Youtube:不良林)
+      - 乌克兰-2.92MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.23MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
+      - 未知国家-306.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-2.17MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-724.4KB/s(Youtube:不良林)
-      - 乌克兰-3.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-431.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-696.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-281.5KB/s(Youtube:不良林)
+      - 乌克兰-2.92MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.23MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
+      - 未知国家-306.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-724.4KB/s(Youtube:不良林)
-      - 乌克兰-3.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-431.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-696.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-281.5KB/s(Youtube:不良林)
+      - 乌克兰-2.92MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.23MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
+      - 未知国家-306.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-724.4KB/s(Youtube:不良林)
-      - 乌克兰-3.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-431.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-696.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-281.5KB/s(Youtube:不良林)
+      - 乌克兰-2.92MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.23MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
+      - 未知国家-306.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-724.4KB/s(Youtube:不良林)
-      - 乌克兰-3.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-431.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-696.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-281.5KB/s(Youtube:不良林)
+      - 乌克兰-2.92MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.23MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
+      - 未知国家-306.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
